#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([snmp2dot], [0.0.1], [ono.kojiro@gmail.com])

AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([test/Makefile])
AC_OUTPUT
